completed bare front end/back for current expected outcomes

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<body>
-  <p id="testlat"></p>
+
+<body class="container">
+  <div>
+    <form id="addressForm">
+      <input type="text" id="address">
+      <button type="submit">Submit</button>
+    </form>
+    <div id="map"></div>
+    <div class="output"></div>
+  </div>
 </body>
+
 </html>
